<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/settings_edit_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first"/>

        <EditText
            android:id="@+id/settings_edit_last"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last"/>

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#80808080" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/background_gray"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settings_image_head"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/default_head" />

            <TextView
                android:id="@+id/settings_text_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/linkBlue"
                android:text="@string/updatehead" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="right">

            <Switch
                android:id="@+id/settings_switch_mute"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:text="@string/mute"/>

            <Switch
                android:id="@+id/settings_switch_meal"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:text="@string/mplan"/>

            <Switch
                android:id="@+id/settings_switch_notif"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:text="@string/notif"/>

        </LinearLayout>

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#80808080" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/settings_edit_town"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/town"/>

        <EditText
            android:id="@+id/settings_edit_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:hint="@string/state"/>

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#80808080" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/background_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtype"/>

        <Spinner
            android:id="@+id/settings_spinner_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#80808080" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college"/>

        <Spinner
            android:id="@+id/settings_spinner_school"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/settings_buttons_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings_button_helpdesk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/helpdesk"/>

        <Button
            android:id="@+id/settings_button_logout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange_500"
            android:textColor="@android:color/white"
            android:text="@string/logout"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_buttons_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings_button_pwreset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/pwreset"/>

        <Button
            android:id="@+id/settings_button_delacct"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_500"
            android:textColor="@android:color/white"
            android:text="@string/delacct"/>

    </LinearLayout>


</LinearLayout>