<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/home_spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SpinnerAsLink"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/home_text_whatgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/home_spinner_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SpinnerAsLink" />

    </LinearLayout>

    <Button
        android:id="@+id/home_button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/search"/>

    <Button
        android:id="@+id/home_button_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/messages"/>

</LinearLayout>