<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="8dp">

    <LinearLayout
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="8dp">

        <ImageView
            android:id="@+id/profile_image_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/profile_text_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/mtype" />

            <TextView
                android:id="@+id/profile_text_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/college" />

            <TextView
                android:id="@+id/profile_text_college"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:text="@string/clubs" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/profile_list_clubs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>

        <TextView
            android:id="@+id/profile_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/linkBlue"
            android:padding="4dp"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>